[package]
name = "image_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = {version = "0.32.0",default-features = false, features = ["glow","wayland","x11","default_fonts"]}
fast_image_resize = { version = "5.2.0", features = [ "rayon"] }
image = "0.25.6"
rfd = "0.15.4"

[build-dependencies]
winresource = "0.1.23"
